<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views_controller.AdicionarGasto">

    <Button
        android:id="@+id/btn_adicionar_gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_adicionar_gasto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_data" />

    <TextView
        android:id="@+id/labelValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelValor"
        app:layout_constraintStart_toStartOf="@+id/txt_descricao"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao" />

    <TextView
        android:id="@+id/labelData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelData"
        app:layout_constraintStart_toStartOf="@+id/txt_valor"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor" />

    <EditText
        android:id="@+id/txt_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/labelDescricao"
        app:layout_constraintTop_toBottomOf="@+id/labelDescricao" />

    <EditText
        android:id="@+id/txt_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/labelValor"
        app:layout_constraintTop_toBottomOf="@+id/labelValor" />

    <EditText
        android:id="@+id/txt_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/labelData"
        app:layout_constraintTop_toBottomOf="@+id/labelData" />

    <TextView
        android:id="@+id/labelDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>