<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views_controller.EditarGasto">

    <TextView
        android:id="@+id/labelDescricaoEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_descricao_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/labelDescricaoEditar"
        app:layout_constraintTop_toBottomOf="@+id/labelDescricaoEditar" />

    <TextView
        android:id="@+id/labelValorEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelValor"
        app:layout_constraintStart_toStartOf="@+id/txt_descricao_editar"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao_editar" />

    <EditText
        android:id="@+id/txt_valor_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/labelValorEditar"
        app:layout_constraintTop_toBottomOf="@+id/labelValorEditar" />

    <TextView
        android:id="@+id/labelDataEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelData"
        app:layout_constraintStart_toStartOf="@+id/txt_valor_editar"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor_editar" />

    <Button
        android:id="@+id/btn_salvar_gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:onClick="editarGasto"
        android:text="@string/btn_editar_gasto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDataEditar" />

    <EditText
        android:id="@+id/txtDataEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/labelDataEditar"
        app:layout_constraintTop_toBottomOf="@+id/labelDataEditar" />

</android.support.constraint.ConstraintLayout>